<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asio_cmake_module</name>
  <version>1.2.0</version>
  <description>A CMake module for using the ASIO network library</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/ros-drivers/transport_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/transport_drivers/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
