<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>serial_driver</name>
  <version>1.2.0</version>
  <description>A template class and associated utilities which encapsulate basic reading from serial ports</description>
  <maintainer email="whitleysoftwareservices@gmail.com">Joshua Whitley</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/ros-drivers/transport_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/transport_drivers/issues</url>
  <author email="opensource@apex.ai">Apex.AI, Inc.</author>
  <author>Esteve Fernandez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>asio_cmake_module</buildtool_depend>

  <depend>asio</depend>
  <depend>io_context</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
